--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: 'Compose specification'
 services:
+  seleniumgrid:
+    container_name: seleniumgridchrome
+    ports:
+      - "4444:4444"
+      - "5900:5900"
+    image: seleniarm/standalone-chromium:latest
+    networks:
+      - selenium-network
   jenkins:
     container_name: jenkins
     ports:
