--- a/pipeline/seleniumGridDocker/docker-compose.yml
+++ b/pipeline/seleniumGridDocker/docker-compose.yml
@@ -7,4 +7,7 @@ services:
       - "5900:5900"
     image: seleniarm/standalone-chromium:latest
     networks:
-      - nbadotcomtesting_selenium-network
+      - selenium-network
+networks:
+  selenium-network:
+    external: true
